--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
   "accentColor": "",
   "baseFontSize": 23,
-  "theme": "system",
+  "theme": "moonstone",
   "cssTheme": "",
   "textFontFamily": "",
   "baseFontSizeAction": true
